--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {  
-  font-family: helvetica, arial, sans-serif;
+  font-family: monospace;
   background-color: black;
   width: 100%;
   height: 100%;
@@ -25,4 +25,19 @@ body {
 
 .MAININPUT:focus {
   outline: none;
+}
+
+.SETTINGS {
+  background-color: orange;
+  width: 0%; 
+  -webkit-transition: width 1s ease-in-out;
+  -moz-transition: width 1s ease-in-out;
+  -o-transition: width 1s ease-in-out;
+  transition: width 1s ease-in-out;
+}
+
+.toggleSettings {
+  background-color: cyan;
+  width: 50px;
+  height: 50x
 }
