--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html, body {  
+html,
+body {
   font-family: monospace;
   background-color: black;
   width: 100%;
@@ -29,15 +30,25 @@ body {
 
 .SETTINGS {
   background-color: orange;
-  width: 0%; 
+  width: 10%;
+  overflow: hidden;
   -webkit-transition: width 1s ease-in-out;
   -moz-transition: width 1s ease-in-out;
   -o-transition: width 1s ease-in-out;
   transition: width 1s ease-in-out;
+  display: flex;
+  align-self: center;
 }
 
 .toggleSettings {
   background-color: cyan;
+  width: 20px;
+  height: 20px;
+  transform: translate(-10px, -10px);
+  transform: rotate(45deg);
+}
+
+.settingsInner {
+  background-color: green;
   width: 50px;
-  height: 50x
 }
