👌🎰 Checkpoint ./style.css:24872531/5876 ./index.html:24872531/520

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .SETTINGS {
-    background-color: black;
+  background-color: black;
   width: 0%;
   height: 100%;
   overflow: hidden;
@@ -41,7 +41,7 @@ body {
   /* align-self: center; */
   justify-content: flex-end;
   align-items: center;
-  
+
   z-index: 2;
 }
 
@@ -51,30 +51,39 @@ body {
   height: 20px;
   transform: translate(10px, -0px) rotate(45deg);
   position: absolute;
-  
+
   z-index: 1;
 }
 
 .settingsInner {
   background-color: black;
   /*   background-color: green; */
-  padding:15px;
+  padding: 15px;
   width: 50px;
   min-height: 100px;
   display: flex;
   flex-flow: column;
   flex-grow: 2;
   color: white;
-  
+
   z-index: 2;
 }
 
 .settingsInner label {
-  padding: 0px 5px;
+  padding: 5px 0px;
 }
 
 .settingsInner > div {
   display: flex;
   align-self: flex-end;
   flex-flow: column;
+  padding-bottom: 15px;
+}
+
+.credits {
+  position: absolute;
+  bottom: 5px;
+  color: white;
+  line-break: anywhere;
+  white-space: pre;
 }
