--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html,
 body {
   font-family: monospace;
-  background-color: black;
+  background-color: #FAEBD7;
   width: 100%;
   height: 100%;
   padding: 0px;
@@ -14,7 +14,7 @@ body {
 }
 
 .MAININPUT {
-  color: white;
+  color: #6e2a00;
   background-color: transparent;
   flex-grow: 2;
   align-self: center;
@@ -29,7 +29,7 @@ body {
 }
 
 .SETTINGS {
-  background-color: black;
+  background-color: #FAEBD7;
   width: 0%;
   height: 100%;
   overflow: hidden;
@@ -46,7 +46,7 @@ body {
 }
 
 .toggleSettings {
-  background-color: white;
+  background-color: brown;
   width: 20px;
   height: 20px;
   transform: translate(10px, -0px) rotate(45deg);
@@ -56,7 +56,7 @@ body {
 }
 
 .settingsInner {
-  background-color: black;
+  background-color: transparent;
   /*   background-color: green; */
   padding: 15px;
   width: 50px;
@@ -64,7 +64,7 @@ body {
   display: flex;
   flex-flow: column;
   flex-grow: 2;
-  color: white;
+  color: brown;
 
   z-index: 2;
 }
@@ -74,9 +74,9 @@ body {
 }
 
 .settingsInner input {
-  background-color: #0d0d0d;
-  color:white;
-  border: 1px dotted white;
+  background-color: #ffecbff;
+  color:#6e2a00;
+  border: 1px dotted #6e2a00;
 }
 
 .settingsInner > div {
@@ -89,7 +89,7 @@ body {
 .credits {
   position: absolute;
   bottom: 5px;
-  color: white;
+  color: #6e2a00;
   line-break: anywhere;
   white-space: pre;
 }
