🍳🐓 Checkpoint ./scripts/components/MusicStaff.js:24872531/1532 ./index.html:24872531/230 ./scripts/components/Settings.js:24872531/1441 ./style.css:24872531/26 ./scripts/App.js:24872531/27766

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html,
-body {
+body, #APP {
   font-family: monospace;
   background-color: #FAEBD7;
   width: 100%;
@@ -8,7 +8,7 @@ body {
   margin: 0px;
 }
 
-body {
+#APP {
   display: flex;
   justify-content: center;
 }
