--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html,
-body, #APP {
+body,
+#APP {
   font-family: monospace;
   background-color: #FAEBD7;
   width: 100%;
@@ -9,7 +10,7 @@ body, #APP {
 }
 
 #APP {
-  width:100%;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
@@ -96,17 +97,9 @@ body, #APP {
 }
 
 .STAFF {
-  flex-grow:2;
-  
-  align-self: center;
-}
-
-.LINES {
-  min-height: 200px;
-  padding: 15%;
-  display: flex;
-  flex-flow: column;
-  justify-content: space-between;
+  flex-grow: 2;
+  position: relative; 
+/*  allows child to grow  */
 }
 
 .LINES > div {
@@ -121,28 +114,39 @@ body, #APP {
   cursor: grab;
 }
 
-.NOTES {
-  background-color: orange;
-}
+.NOTES {}
 
 .note {
   background-color: green;
+  border-top: 1px solid #6e2a00;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  padding: 0px 30px;
 }
 
 .measure {
   background-color: Violet;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-around;
 }
 
 .flex-fix {
-/*   position:absolute; */
-  display:flex;
-  width:100%;
-  height:100%;
+  position: absolute;
+  display: flex;
+/*   width: 100%; */
+  height: 100%;
   align-items: center;
   justify-content: center;
-/*   float:left; */
+  /*   float:left; */
 }
 
-.flex-fix > div{
-  
+.flex-fix > div {
+  width: 100%;
+  min-height: 200px;
+  padding: 15%;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
 }
