--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ body,
 .flex-fix {
   position: absolute;
   display: flex;
-/*   width: 100%; */
+  width: 100%;
   height: 100%;
   align-items: center;
   justify-content: center;
