🌋👚 Checkpoint ./style.css:24872531/97

--- a/style.css
+++ b/style.css
@@ -114,7 +114,9 @@ body,
   cursor: grab;
 }
 
-.NOTES {}
+.NOTES {
+  align-self: stretch;
+}
 
 .note {
   background-color: green;
@@ -123,6 +125,7 @@ body,
   flex-flow: row;
   justify-content: space-between;
   padding: 0px 30px;
+  align-self: center;
 }
 
 .measure {
@@ -130,6 +133,8 @@ body,
   display: flex;
   flex-flow: row;
   justify-content: space-around;
+  height: 100%;
+  border-right: 1px solid #6e2a00;
 }
 
 .flex-fix {
