--- a/style.css
+++ b/style.css
@@ -97,9 +97,15 @@ body,
 }
 
 .STAFF {
-  flex-grow: 2;
-  position: relative; 
-/*  allows child to grow  */
+  flex-grow: 2;  
+  /*  allows child to grow  */
+  position: relative;
+}
+
+.LINES {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
 }
 
 .LINES > div {
@@ -107,7 +113,10 @@ body,
 }
 
 .NOTES {
-/*   align-self: stretch; */
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: start; 
+  align-items: center;
 }
 
 .note {
@@ -122,19 +131,21 @@ body,
 }
 
 .measure {
-  background-color: Violet;
+/*   background-color: Violet; */
   display: flex;
   flex-flow: row;
   justify-content: space-around;
-  height: 100%;
+/*   height: 100%; */
   border-right: 2px solid #6e2a00;
+  flex-grow: 2;
+  align-self: normal;
 }
 
 .flex-fix {
-  position: absolute;
-  display: flex;
   width: 100%;
   height: 100%;
+  position: absolute;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -143,7 +154,4 @@ body,
   width: 100%;
   min-height: 200px;
   padding: 15%;
-  display: flex;
-  flex-flow: column;
-  justify-content: space-around;
 }
