🏢📕 Checkpoint ./scripts/App.js:24872531/12411 ./scripts/components/MusicStaff.js:24872531/37 ./style.css:24872531/30

--- a/style.css
+++ b/style.css
@@ -121,8 +121,8 @@ body,
 
 .note {
   cursor: grab;
-  background-color: green;
-  border-top: 1px solid #6e2a00;
+  background-color: #FAEBD7;
+/*   border-top: 1px solid #6e2a00; */
   display: flex;
   flex-flow: row;
   justify-content: space-between;
