--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body,
 .noteWrapper {
 /*   background-color: orange; */
   justify-content: space-between;
-  padding: 0px 15px;
+  padding: 0px 50px;
   align-self: center;
   width:100%;
 }
@@ -114,6 +114,7 @@ body,
     position: relative;  
   display: flex;
   flex-flow: row;
+  font-size: 1.3em;
 }
 
 .measure {
