--- a/style.css
+++ b/style.css
@@ -93,6 +93,18 @@ body,
 }
 
 .LINES > div {
+/*   border-top: 1px solid #6e2a00; */
+}
+
+.MEASURELINES {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;  
+/*   width:100%; */
+  position:absolute
+}
+
+.MEASURELINES > div {
   border-top: 1px solid #6e2a00;
 }
 
@@ -129,7 +141,9 @@ body,
 /*   height: 100%; */
   border-right: 2px solid #6e2a00;
   flex-grow: 2;
+  position:relative;
   align-self: normal;
+  margin:30px 0px;
 }
 
 .flex-fix {
@@ -137,8 +151,8 @@ body,
   height: 100%;
   position: absolute;
   display: flex;
-/*   align-items: center; */
-  align-items: flex-start;
+  align-items: center;
+/*   align-items: flex-start; */
   justify-content: center;
 }
 
