--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body,
     position: relative;  
   display: flex;
   flex-flow: row;
-  font-size: 1.3em;
+  font-size: 1.4em;
 }
 
 .measure {
@@ -143,7 +143,7 @@ body,
 /*   border-right: 2px solid #6e2a00; */
   flex-grow: 2;
   position:relative;
-  align-self: normal;
+/*   align-self: normal; */
 }
 
 .flex-fix {
