--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html,
 body,
 #APP {
   font-family: monospace;
-  background-color: #FAEBD7;
+  background-color: #E6E6FA;
   width: 100%;
   height: 100%;
   padding: 0px;
@@ -16,7 +16,7 @@ body,
 }
 
 .SETTINGS {
-  background-color: #FAEBD7;
+  background-color: #E6E6FA;
   width: 0%;
   height: 100%;
   overflow: hidden;
@@ -40,7 +40,7 @@ body,
 }
 
 .settingsInner {
-  background-color: #FAEBD7;
+  background-color: #E6E6FA;
   padding: 15px;
   width: 50px;
   min-height: 100px;
@@ -106,7 +106,7 @@ body,
 }
 
 .MEASURELINES > div {
-  border-top: 1px solid #6e2a00;
+  border-top: 1px solid purple;
 }
 
 .NOTES {
@@ -126,7 +126,7 @@ body,
 
 .note {
   justify-content:center;
-  background-color: #FAEBD7;
+  background-color: #E6E6FA;
     cursor: grab;
     position: relative;  
   display: flex;
