--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+/* 
+  dark: #602500
+  light: #d8d7fa
+*/
+
 html,
 body,
 #APP {
   font-family: monospace;
-  background-color: #E6E6FA;
+  background-color: #d8d7fa;
   width: 100%;
   height: 100%;
   padding: 0px;
@@ -16,13 +21,13 @@ body,
 }
 
 .SETTINGS {
-  background-color: #E6E6FA;
+  background-color: #d8d7fa;
   width: 0%;
   height: 100%;
   overflow: hidden;
   display: flex;
   justify-content: flex-end;
-  align-items: center;  
+  align-items: center;
   -webkit-transition: width 1s ease-in-out;
   -moz-transition: width 1s ease-in-out;
   -o-transition: width 1s ease-in-out;
@@ -31,7 +36,7 @@ body,
 }
 
 .toggleSettings {
-  background-color: brown;
+  background-color: #602500;
   width: 20px;
   height: 20px;
   transform: translate(10px, -0px) rotate(45deg);
@@ -40,14 +45,12 @@ body,
 }
 
 .settingsInner {
-  background-color: #E6E6FA;
+  background-color: #d8d7fa;
   padding: 15px;
-  width: 50px;
-  min-height: 100px;
   display: flex;
   flex-flow: column;
-  flex-grow: 2;
-  color: brown;
+  color: #602500;
+  align-content: stretch;
   z-index: 2;
 }
 
@@ -55,35 +58,58 @@ body,
   padding: 5px 0px;
 }
 
+.settingsInner button {
+  background-color: #fff;
+  color: #602500;
+  border: 1px solid #602500;  
+  margin: 0px 5px;
+  flex-grow; 2;
+}
+
 .settingsInner input {
-  background-color: #ffecbff;
-  color: #6e2a00;
-  border: 1px dotted #6e2a00;
+  background-color: #fff;
+  color: #602500;
+  border: 1px dotted #602500;
 }
 
 .settingsInner > div {
   display: flex;
-  align-self: flex-end;
-  flex-flow: column;
   padding-bottom: 15px;
+}
+
+.inputGroup {
+  flex-flow: column;
+}
+
+.buttonGroup {
+  flex-flow: row;
+  width:100%;
+}
+
+.buttonGroup button {
+  flex-grow: 2;
 }
 
 .credits {
   position: absolute;
   bottom: 5px;
-  color: #6e2a00;
+  color: #602500;
   line-break: anywhere;
   white-space: pre;
 }
 
+/* MUSIC STAFF */
+
 .CLEF {
   height: 100%;
+  align-self: center;
 }
 
 .STAFF {
-  flex-grow: 2;  
+  flex-grow: 2;
   /*  allows child to grow  */
   position: relative;
+  overflow: overlay;
 }
 
 .LINES {
@@ -92,58 +118,50 @@ body,
   justify-content: space-between;
 }
 
-.LINES > div {
-/*   border-top: 1px solid #6e2a00; */
-}
-
 .MEASURELINES {
   display: flex;
   flex-flow: column;
-  justify-content: space-between;  
-/*   width:100%; */
-  position:absolute;
+  justify-content: space-between;
+  position: absolute;
   box-sizing: border-box;
 }
 
 .MEASURELINES > div {
-  border-top: 1px solid purple;
+  border-top: 1px solid #602500;
 }
 
 .NOTES {
   display: flex;
   flex-flow: row wrap;
-  justify-content: start; 
-  align-items: center;
 }
 
 .noteWrapper {
-/*   background-color: orange; */
-  justify-content: space-between;
-  padding: 0px 50px;
+  padding: 0px 40px;
   align-self: center;
-  width:100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .note {
-  justify-content:center;
-  background-color: #E6E6FA;
-    cursor: grab;
-    position: relative;  
+  width: 50px;
+  justify-content: center;
+  background-color: #602500;
+  cursor: grab;
+  position: relative;
   display: flex;
   flex-flow: row;
   font-size: 1.4em;
+  color: #d8d7fa;  
+  box-sizing: border-box;
 }
 
 .measure {
-/*   background-color: Violet; */
   display: flex;
   flex-flow: row;
-  justify-content: space-around;
-/*   height: 100%; */
-/*   border-right: 2px solid #6e2a00; */
+  justify-content: flex-start;
   flex-grow: 2;
-  position:relative;
-/*   align-self: normal; */
+  position: relative;
 }
 
 .flex-fix {
@@ -152,12 +170,17 @@ body,
   position: absolute;
   display: flex;
   align-items: center;
-/*   align-items: flex-start; */
   justify-content: center;
 }
 
 .flex-fix > div {
   width: 100%;
-  min-height: 200px;
+  min-height: 100px;
   margin: 15%;
+}
+ 
+.tempo-marker {
+  width: auto;
+  align-self: start;
+  margin: 0px !important;
 }
