📻🚈 Checkpoint ./scripts/App.js:24872531/29395 ./style.css:24872531/12140

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* 
   dark: #602500
-  light: #FAEBD7
+  light: #e3d8ff
 */
 
 * {
@@ -11,7 +11,7 @@ html,
 body,
 #APP {
   font-family: monospace;
-  background-color: #FAEBD7;
+  background-color: #e3d8ff;
   width: 100%;
   height: 100%;
   padding: 0px;
