--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body,
 }
 
 .SETTINGS {
-  background-color: #FAEBD7;
+  background-color: #e3d8ff;
   width: 0%;
   height: 100%;
   overflow: hidden;
@@ -49,7 +49,7 @@ body,
 }
 
 .settingsInner {
-  background-color: #FAEBD7;
+  background-color: #e3d8ff;
   padding: 15px;
   display: flex;
   flex-flow: column;
