--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html,
 body,
 #APP {
   font-family: monospace;
-  background-color: #e3d8ff;
+  background-color: #FAEBD7;
   width: 100%;
   height: 100%;
   padding: 0px;
@@ -25,7 +25,7 @@ body,
 }
 
 .SETTINGS {
-  background-color: #e3d8ff;
+  background-color: #FAEBD7;
   width: 0%;
   height: 100%;
   overflow: hidden;
@@ -36,7 +36,8 @@ body,
   -moz-transition: width 1s ease-in-out;
   -o-transition: width 1s ease-in-out;
   transition: width 1s ease-in-out;
-  z-index: 2;
+  z-index: 2; 
+  overflow-y: overlay;
 }
 
 .toggleSettings {
@@ -49,7 +50,7 @@ body,
 }
 
 .settingsInner {
-  background-color: #e3d8ff;
+  background-color: #FAEBD7;
   padding: 15px;
   display: flex;
   flex-flow: column;
@@ -58,10 +59,13 @@ body,
   box-sizing: border-box;
   align-content: stretch;
   z-index: 2;
+  padding-right: 25px;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .settingsInner label {
-  padding: 5px 0px;
+  padding: 5px 5px 5px 0px;
 }
 
 .settingsInner button {
@@ -79,48 +83,31 @@ body,
   min-width: 0px;
 }
 
+.settingsInner select {
+  background-color: #fff;
+  color: #602500;
+  border: 1px solid #602500;
+  min-width: 0px;
+  flex-grow: 2;
+}
+
 .settingsInner > div {
   display: flex;
-  padding-bottom: 15px;
+  box-shadow: 2px 2px 6px 0px;
 }
 
-.inputGroup {
-  flex-flow: column;
-}
 
-.buttonGroup {
-  flex-flow: row;
-  width: 100%;
-  align-items: center;
-}
 
 .credits {
-  position: absolute;
-  bottom: 5px;
   color: #602500;
   line-break: anywhere;
   white-space: pre;
+  margin: 15px 0px;
 }
 
 /* MUSIC STAFF */
 
-.CLEF {
-  height: 100%;
-  align-self: center;
-}
 
-.STAFF {
-  flex-grow: 2;
-  /*  allows child to grow  */
-  position: relative;
-  overflow: overlay;
-}
-
-.LINES {
-  display: flex;
-  flex-flow: column;
-  justify-content: space-between;
-}
 
 .MEASURELINES {
   display: flex;
@@ -132,50 +119,6 @@ body,
 
 .MEASURELINES > div {
   border-top: 1px solid #602500;
-}
-
-.NOTES {
-  display: flex;
-  flex-flow: row wrap;
-}
-
-.voiceWrapper {
-  width: 100%;
-  display: flex;
-  flex-flow: column;
-  height: 100%;
-  justify-content: center;
-}
-
-.note {
-  width: 50px;
-  justify-content: center;
-  align-items: center;
-  background-color: #602500;
-  cursor: grab;
-  position: absolute;
-  display: flex;
-  flex-flow: row;
-  font-size: 1.4em;
-  color: #FAEBD7;
-  box-sizing: border-box;
-}
-
-.noteWrapper {
-  width: 100%;
-  padding: 0px 40px;
-  align-items: center;
-  display: flex;
-  position: relative;
-  justify-content: center;
-}
-
-.measure {
-  display: flex;
-  flex-flow: row;
-  justify-content: flex-start;
-  flex-grow: 2;
-  position: relative;
 }
 
 .flex-fix {
@@ -193,16 +136,3 @@ body,
   margin: 15%;
 }
 
-.tempo-marker {
-  width: auto;
-  align-self: start;
-  margin: 0px !important;
-}
-
-.midiLog table {
-  width: 100%;
-}
-
-.midiLog table tr:nth-child(odd) {
-  background-color: #ccc;
-}
