--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html,
 body,
 #APP {
   font-family: monospace;
-  background-color: #FAEBD7;
+  background-color: #e3d8ff;
   width: 100%;
   height: 100%;
   padding: 0px;
@@ -25,7 +25,7 @@ body,
 }
 
 .SETTINGS {
-  background-color: #FAEBD7;
+  background-color: #e3d8ff;
   width: 0%;
   height: 100%;
   overflow: hidden;
@@ -50,7 +50,7 @@ body,
 }
 
 .settingsInner {
-  background-color: #FAEBD7;
+  background-color: #e3d8ff;
   padding: 15px;
   display: flex;
   flex-flow: column;
